	PR optimization/11646 	* cfgrtl.c (purge_dead_edges) [JUMP_INSN]: Rematerialize the 	EDGE_ABNORMAL flag for EH edges. 	* toplev.c (rest_of_handle_cse): Delete unreachable blocks 	if dead edges were purged.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@71455 138bc75d-0d04-0410-961f-82ee72b054a4